--- a/app/src/main/res/layout/fragment_moon.xml
+++ b/app/src/main/res/layout/fragment_moon.xml
@@ -1,150 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingTop="20dp">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView12"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/moon"
-        android:textSize="@dimen/title"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingTop="20dp">
 
-    <TextView
-        android:id="@+id/latitudeTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="@dimen/p" />
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/moon"
+            android:textSize="@dimen/title"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/longitudeTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="@dimen/p" />
+        <TextView
+            android:id="@+id/latitudeTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="@dimen/p" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="5dp"
-        android:text="@string/moonrise"
-        android:textSize="@dimen/h1"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/longitudeTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="@dimen/p" />
 
-    <TextView
-        android:id="@+id/moonriseTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="30dp"
-        android:paddingRight="20dp"
-        android:text="Time: "
-        android:textSize="@dimen/p" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="5dp"
+            android:text="@string/moonrise"
+            android:textSize="@dimen/h1"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="5dp"
-        android:text="@string/moonset"
-        android:textSize="@dimen/h1"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/moonriseTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:paddingRight="20dp"
+            android:text="Time: "
+            android:textSize="@dimen/p" />
 
-    <TextView
-        android:id="@+id/moonsetTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="30dp"
-        android:paddingRight="20dp"
-        android:text="Time: "
-        android:textSize="@dimen/p" />
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="5dp"
+            android:text="@string/moonset"
+            android:textSize="@dimen/h1"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="5dp"
-        android:text="@string/newMoon"
-        android:textSize="@dimen/h1"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/moonsetTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:paddingRight="20dp"
+            android:text="Time: "
+            android:textSize="@dimen/p" />
 
-    <TextView
-        android:id="@+id/newMoonTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="30dp"
-        android:paddingRight="20dp"
-        android:text="Time: "
-        android:textSize="@dimen/p" />
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="5dp"
+            android:text="@string/newMoon"
+            android:textSize="@dimen/h1"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView25"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="5dp"
-        android:text="@string/fullMoon"
-        android:textSize="@dimen/h1"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/newMoonTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:paddingRight="20dp"
+            android:text="Time: "
+            android:textSize="@dimen/p" />
 
-    <TextView
-        android:id="@+id/fullMoon"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="30dp"
-        android:paddingRight="20dp"
-        android:text="Time: "
-        android:textSize="@dimen/p" />
+        <TextView
+            android:id="@+id/textView25"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="5dp"
+            android:text="@string/fullMoon"
+            android:textSize="@dimen/h1"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="5dp"
-        android:text="@string/moonPhase"
-        android:textSize="@dimen/h1"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/fullMoon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:paddingRight="20dp"
+            android:text="Time: "
+            android:textSize="@dimen/p" />
 
-    <TextView
-        android:id="@+id/moonPhase"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="30dp"
-        android:paddingRight="20dp"
-        android:text="Time: "
-        android:textSize="@dimen/p" />
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="5dp"
+            android:text="@string/moonPhase"
+            android:textSize="@dimen/h1"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="5dp"
-        android:text="@string/synodicDay"
-        android:textSize="@dimen/h1"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/moonPhase"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:paddingRight="20dp"
+            android:text="Time: "
+            android:textSize="@dimen/p" />
 
-    <TextView
-        android:id="@+id/synodicDay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="30dp"
-        android:paddingRight="20dp"
-        android:text="Time: "
-        android:textSize="@dimen/p" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/textView19"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="5dp"
+            android:text="@string/synodicDay"
+            android:textSize="@dimen/h1"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/synodicDay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="30dp"
+            android:paddingRight="20dp"
+            android:text="Time: "
+            android:textSize="@dimen/p" />
+    </LinearLayout>
+</ScrollView>
